AC_INIT([dbus-utils],[git],[http://github.com/slapin/dbus-utils])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.11])
AC_PROG_CC
AM_PROG_CC_C_O
AC_STDC_HEADERS
AM_PROG_LIBTOOL
PKG_CHECK_MODULES(GLIB,gio-2.0 gio-unix-2.0)
dnl PKG_CHECK_MODULES(SQLITE,sqlite3)
dnl PKG_CHECK_MODULES(DBUS,dbus-glib-1)
PKG_CHECK_MODULES(MODBUS,libmodbus >= 3.0.5)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

